# snakemake-storage-plugin-pelican

./: pyproject.toml
.github/workflows/: ci.yml  conventional-prs.yml
tests/: README.md  conftest.py  test_plugin.py
